UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Customer_Response__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Response_Duration__c</fullName>
        <description>This field calculates the duration by the customer to respond to the proposal sent</description>
        <formula>Phoenix_Customer_Response_Date__c  -  Phoenix_Bid_No__r.Phoenix_Sent_to_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Type__c</fullName>
        <label>Delay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Delay</fullName>
                </value>
                <value>
                    <fullName>Controllable</fullName>
                </value>
                <value>
                    <fullName>Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Affected_Contract_s__c</fullName>
        <label>Contract #&apos;s for Position/Volume</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Name__c</fullName>
        <formula>Phoenix_Bid_No__r.Phoenix_Bid_Name__c</formula>
        <label>Bid Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid No.</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Customer Responses</relationshipLabel>
        <relationshipName>Customer_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Change_Type_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Type - Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Change_Type_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Type - Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Update_Date__c</fullName>
        <label>Contract Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_for_Vistex_Update__c</fullName>
        <label>Contract #&apos;s for Vistex Update</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Date__c</fullName>
        <label>Customer Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Responses</relationshipLabel>
        <relationshipName>Customer_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Recalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Items_Pending__c</fullName>
        <label>Items Pending?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Items Settled</fullName>
                </value>
                <value>
                    <fullName>Partial Items Pending</fullName>
                </value>
                <value>
                    <fullName>All Items Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Mck_Proposed_Position__c</fullName>
        <label>Mck Proposed Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>Customer Responses</relationshipLabel>
        <relationshipName>Customer_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Positions_CR__c</fullName>
        <label>Proposed Positions CR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sent_to_Customer_Date__c</fullName>
        <label>Sent to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Instructions_to_AGR__c</fullName>
        <label>Special Instructions to AGR</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Comments__c</fullName>
        <label>Vistex Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Status__c</fullName>
        <label>Vistex Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update_Date__c</fullName>
        <label>Vistex Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ratification_Comments__c</fullName>
        <label>Ratification Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vistex_Action_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vistex Action Needed?</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_No__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Change_Type_Pricing__c</columns>
        <columns>Phoenix_Change_Type_Rebate__c</columns>
        <columns>Phoenix_Sent_to_Customer_Date__c</columns>
        <columns>Phoenix_Customer_Response_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Customer Response No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>